[project]
name = "nklf1"
version = "0.1.0"
description = "A flask app to make routine tasks of a hospital neurologist easier."
authors = ["PavelDusek <pavel.dusek@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-wtf>=1.2.2",
    "gunicorn>=25.3.0",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "wtforms>=3.2.1",
]

